Further Optimization : Remove Codegroup queries from everywhere, now using globalCodegroupMap. Filling it on start of app to make it even faster